fix: broker server type search, dark mode

--- a/assets/styles/components/dark-mode.scss
+++ b/assets/styles/components/dark-mode.scss
@@ -60,7 +60,7 @@
   }
 
   .header {
-    background-color: var(--gray-700);
+    background-color: var(--secondary-dark);
     border-bottom: 1px solid var(--gray-500);
   }
 
